--- a/lesson1.Rmd
+++ b/lesson1.Rmd
@@ -9,7 +9,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Setting up  Reproducible Workflow
+## Part 1--Setting up a Reproducible Structure
 Start by navigating to a folder that will serve as the host of the main repository, e.g. ```/rob/research/projects```
 
 Once there, replicate this folder structure. 
@@ -37,14 +37,15 @@ touch requirements.txt
 
 Ok - all done - for now. Let's talk about what goes into each, and then we'll start to populate the folders a bit.
 
-## Start With Raw Data
+## Part 2--Populate The Folders
+### Start With Raw Data
 I've given you a raw dataset from the Bahamas Marine Mammal Research Organization. They are in csv format. Download them from box, and put them into your ```data``` folder. You can look at them with the head command. Note where you are on the command line first, otherwise you may be looking for data in all the wrong places.
 
 ```{r viewData, engine='bash', eval=FALSE}
 head bbmroData.csv --lines=2
 ```
 
-## A Few Scripts
+### Generate A Few Scripts
 Ok, at this point we have a file structure, and raw data - nothing else. But let's keep going with a simple R script to read in the data. Make a script in the ```src``` folder and call it something clever like ```readData.R``` Try this first on the command line.
 
 ```{r makeData, engine='bash', eval=FALSE}
@@ -68,4 +69,4 @@ touch runAll.R
 
 That will make the files, but they're going to be empty just now.
 
-
+Ok, that's it for this lesson.
