--- a/lesson2b.Rmd
+++ b/lesson2b.Rmd
@@ -28,15 +28,17 @@ So what all have we asked for? We've said, show us the log, but in a compact for
 
 
 ## Commit Messages
-Recall what we talked about in Lecture - good commit messages are worth the effort, and will help you come back to the repo/project and understand not only what you did (use the ```diffs``` for that), but also why. If you are writing command line commit messages, it's hard to really write a thoughtful one. However, if you have an editor configured (my default is vi) then you can easily write a good message. Try it (with the knowledge that this commit is really a toy commit).You can invoke the editor by just typing ```git commit``` without any flag. Here's what I get when I type that:
+Recall what we talked about in Lecture - good commit messages are worth the effort, and will help you come back to the repo/project and understand not only what you did (use the ```diffs``` for that), but also why. If you are writing command line commit messages, it's hard to really write a thoughtful one. However, if you have an editor configured (my default is vi) then you can easily write a good message. Try it with the knowledge that this commit is really a toy commit.But **make sure** you have your editor *configured.* If not it will default to vi, which, if you haven't used it, can be a uniquely frustrating experience.
+
+You can invoke the editor by just typing ```git commit``` without any flag. Here's what I get when I type that:
 
 ![](images/vim.png)
 
-Now you can type a good message with a less than 50 character Capitalized First Line, followed by detailed text that describes the why of the commit. With a declarative succinct first line, you can see at a glance what each commit is about, and then with ```git show``` you can dig in and read more.  
+Now you can type a good message with a less than 50 character Capitalized First Line, followed by detailed text that describes the why of the commit. With a declarative succinct first line, you can see at a glance what each commit is about.  
 
-On the subject of declarative, here's a **useful tip**. You want the first line to complete this sentence = 'If added, this commit will ....'
+On the subject of declarative, here's a **useful tip**. When writing a commit message, you want the first line to complete this sentence = 'If added, this commit will ....'
 
-Here's what I get - note the top part of the figure that shows the oneline with the declarative statement..."If added, this commit will Add a Draft Histogram of the Sea Surface Temperature Data."
+Here's what I get - note the top part of the figure that shows the oneline with the declarative statement..."If added, this commit will Add a Second Helpful Readme Line"
 
 
 ![](images/vimLog.png)
@@ -79,7 +81,11 @@ All looks good right from the OS point of view - right? What happens when you as
 git status
 ```
 
-What to do now? We back out the change
+What to do now? Well we have options. One thing we could do is to add the deleted file. 
+
+![](images/gitRm2.png)
+
+Or we could back out the change. We do that with the git checkout command. (**n.b.** again - look at the help from git status - it tells you a lot.)
 
 ```{r git checkout, engine='bash', eval = FALSE}
 git checkout -- prediction.R
@@ -110,7 +116,7 @@ git commit -m "Rename Simulation Script for Clarity"
 ## The .gitignore File
 One person in the responses to the survey asked about what to version control and what not to. I tend to keep just the code versioned, and things that can be easily created on the fly, I ignore. If you create a lot of these files, e.g. intermediate ```*.Rdata``` files, or ```*.png``` files, etc., your repo can get pretty messy as you create them. Even if you aren't tracking them, git is aware of them, so typing git status can yield a lot of information. 
 
-Thankfully, there's mechanism, and it's called the ```.gitignore``` file. All you have to do is create it, put in a few patterns to match (and thus have git ignore), and then place it into version control. Let's try it with a pdf file. First add the plotting device code to your ```plotData.R``` script.
+Thankfully, there's a mechanism to handle this, and it's called the ```.gitignore``` file. All you have to do is create it, put in a few patterns to match (and thus have git ignore whatever file type satisfies the pattern), and then place the .gitignore into version control. Let's try it with a pdf file. First add the plotting device code to your ```plotData.R``` script.
 
 ```{r gitignore, eval = FALSE}
 pdf(file = '../results/firstHistogram.pdf')
