Clarify steps in Download

--- a/lesson1.Rmd
+++ b/lesson1.Rmd
@@ -16,7 +16,7 @@ Once there, replicate this folder structure.
 
 ![](images/folderStructure.jpg)
 
-I recommend doing this on the command line first, just to get some familiarity, but if you want to do it with Windows Explorer or Finder, that's fine too. Here are the folders:
+I recommend doing this on the command line first, just to get some familiarity, but if you want to do it with Windows Explorer or Finder, that's fine too. Here are the commnads to generate the folders. This are issued at the command line (mac - terminal, windows - gitbash):
 
 ```{r mkdirs, engine = 'bash', eval = FALSE}
 mkdir myrepo
@@ -32,14 +32,18 @@ Now make some files at the root level of the directory:
 touch LICENSE
 touch README
 touch CITATION
-touch requirements.txt
 ```
 
 Ok - all done - for now. Let's talk about what goes into each, and then we'll start to populate the folders a bit.
 
 ## Part 2--Populate The Folders
 ### Start With Raw Data
-I've given you a raw dataset from the Bahamas Marine Mammal Research Organization. They are in csv format. Download them from box, and put them into your ```data``` folder. You can look at them with the head command. Note where you are on the command line first, otherwise you may be looking for data in all the wrong places.
+I've given you a raw dataset from the Bahamas Marine Mammal Research Organization. They are in csv format. 
+
+1. Download them from box
+2. Put the file into your ```data``` folder. 
+
+If you want, you can look at them with the ```head``` command - like above this is a unix command that you issue on the command line. Note where you are on the command line first, otherwise you may be looking for data in all the wrong places.
 
 ```{r viewData, engine='bash', eval=FALSE}
 head bbmroData.csv --lines=2
