Updated Data File

--- a/lesson1.Rmd
+++ b/lesson1.Rmd
@@ -38,7 +38,7 @@ Ok - all done - for now. Let's talk about what goes into each, and then we'll st
 
 ## Part 2--Populate The Folders
 ### Start With Raw Data
-I've given you a raw dataset from the Bahamas Marine Mammal Research Organization. They are in csv format. 
+I've given you three datasets from the Cape Hatteras BRS. They are in csv format. 
 
 1. Download them from box
 2. Put the file into your ```data``` folder. 
@@ -46,7 +46,7 @@ I've given you a raw dataset from the Bahamas Marine Mammal Research Organizatio
 If you want, you can look at them with the ```head``` command - like above this is a unix command that you issue on the command line. Note where you are on the command line first, otherwise you may be looking for data in all the wrong places.
 
 ```{r viewData, engine='bash', eval=FALSE}
-head bbmroData.csv --lines=2
+head 2018-11-26_2017-Cape-Hatteras-BRS-kahuna-CEE --lines=2
 ```
 
 ### Generate A Few Scripts
@@ -59,7 +59,7 @@ touch readData.R
 While we're at it, let's make three more empty files:
 
 ```{r makeEmptyScripts, engine='bash', eval=FALSE}
-touch summarizeData.R
+touch wrangleData.R
 touch plotData.R
 touch runRegression.R
 ```
