Update Directory Location Information & Add Linus Picture

--- a/lesson2.Rmd
+++ b/lesson2.Rmd
@@ -11,12 +11,17 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Awesome. Now we're ready to move things along with git somewhat. At this point, we've made a structure that's consistent, and can form the basics of a reproducible workflow. We've talked about one way to manually track the changes of the whole project - namely taking the whole structure, and putting it into a folder with a date-specific name, e.g. ```20170-08-06-contents-of-myRepo```
 
-This can work, and is not a bad setup, but it requires a lot of intervention and consistency on the part of you the project organizer. One other drawback - in my mind - is that with more than one user and/or more than one computer, it's very hard to scale. Things can get complicated and out of phase/sync quickly. The solution? A modern version control system; here we'll explore ```git```
+This can work, and is not a bad setup, but it requires a lot of intervention and consistency on the part of you, the project organizer. One other drawback - in my mind - is that with more than one user and/or more than one computer, it's very hard to scale. Things can get complicated and out of phase/sync quickly. The solution? A modern version control system; here we'll explore ```git```
 
 
-```git``` was written by Linus Torvalds - the creator of Linux. It was an outflow of bitkeeper, and was built to manage the linux kernel. Undoubtedly this is a bigger project than you or I will ever work on. At present the kernel is approximately 17 million lines of code, with 2-3 thousand contributing developers. No wonder they need a robust system. We've talked about what ```git``` is in the lecture, and now we'll start to put it into practice. 
+```git``` was written by Linus Torvalds - the creator of Linux. 
+![](images/linus-eff-you-640x363.png)
 
-Let's ```cd``` into the ```src``` directory. Type ```pwd``` just to make sure you are where you think you are. Then let's initialize the repository:
+It was an outflow of bitkeeper, and was built to manage the linux kernel. Undoubtedly this is a bigger project than you or I will ever work on. At present the kernel is approximately 17 million lines of code, with 2-3 thousand contributing developers. No wonder they need a robust version control system. We've talked about what ```git``` is in the lecture, and now we'll start to put it into practice. 
+
+You should be in the **folder that you made that contains the whole repository**, e.g. ```my_repo```. Type ```pwd``` just to make sure you are where you think you are. 
+
+Then let's initialize the repository:
 
 ```{r gitInit, engine = 'bash', eval = FALSE}
 git init
@@ -40,7 +45,7 @@ Right now we are in the staging area, and we should have 5 ```*.R``` files - 4 t
 
 
 ```{r add1stFile, engine = 'bash', eval = FALSE}
-git add readData.R
+git add src/readData.R
 ```
 
 You should get nothing back - just the command prompt again. But if you ask for the status again, you'll see something different:
@@ -88,11 +93,11 @@ Let's edit the file now to actually read in the data. Do this in the text editor
 Here's what I added to mine (recall the tip to put at least a barebones comment at the start of the script):
 
 ```{r, eval=FALSE}
-#' This script will read in raw data from the Bahamas Marine Mammal Research Organization
-#' into a data frame called whales. whales will serve as the intermediate data for
+#' This script will read in raw data from the Cape Hatteras BRS
+#' into a data frame called gm182, which will serve as the intermediate data for
 #' subsequent analysis
-whales <- read.csv(file = '../data/bbmroData.csv')
-head(whales)
+gm182 <- read.csv(file = '../data/2018-11-27_Gm182-Start-CEE-Locations-Kahuna.csv')
+head(gm182)
 ```
 
 Now we have some new code, i.e. the file has been modified. So go back to the command prompt, and type:
