Update Filepaths & Pictures

--- a/lesson2b.Rmd
+++ b/lesson2b.Rmd
@@ -30,11 +30,11 @@ So what all have we asked for? We've said, show us the log, but in a compact for
 ## File Management with Git - rm and mv
 One thing that is good to remember is that you've added a file to git, then it's being tracked until you delete it. And actually even if you delete it, it gets stored in previous commits - because it _was_ in that repo at one point in time. Though the file is just a file, once it's tracked, don't be tempted to remove it via the operating system. 
 
-If you want to delete a file, or if you want to change it's name, git offers utlities to do this. Not surprisingly, they are ```git rm``` and ```git mv```. Let's see them in operation. First we'll add two files - one to move/rename and one to delete. We'll do this in the ```src``` directory again.
+If you want to delete a file, or if you want to change it's name, git offers utlities to do this. Not surprisingly, they are ```git rm``` and ```git mv```. Let's see them in operation. First we'll add two files - one to move/rename and one to delete. We'll add these files tothe ```src``` directory.
 
 ```{r gitAddII, engine='bash', eval = FALSE}
-touch prediction.R
-touch simData.R
+touch src/prediction.R
+touch src/simData.R
 git add .
 git commit -m "Add Two Files for Experimenting with Moving and Deleting"
 ```
@@ -42,7 +42,7 @@ git commit -m "Add Two Files for Experimenting with Moving and Deleting"
 With these setup and added, let's delete it at the command line just to see what happens:
 
 ```{r removeOS, engine='bash', eval = FALSE}
-rm prediction.R
+rm src/prediction.R
 ```
 
 All looks good right from the OS point of view - right? What happens when you ask ```git``` what the status is?
@@ -59,7 +59,7 @@ What to do now? Well we have options. One thing we could do is to add the delete
 Or we could back out the change. We do that with the git checkout command. (**n.b.** again - look at the help from git status - it tells you a lot.)
 
 ```{r git checkout, engine='bash', eval = FALSE}
-git checkout -- prediction.R
+git checkout -- src/prediction.R
 git status
 
 ```
@@ -82,7 +82,7 @@ git commit -m "Delete prediction.R File"
 Now that file is gone and the repo is clean, let's rename the other file - this time using git. As above, if you use git's utilities for this, you don't have to add the changes
 
 ```{r engine='bash', eval=FALSE}
-git mv simData.R simXYData.R
+git mv src/simData.R src/simXYData.R
 git commit -m "Rename Simulation Script for Clarity"
 ```
 
