--- a/lesson1.Rmd
+++ b/lesson1.Rmd
@@ -63,21 +63,21 @@ head 2018-11-26_2017-Cape-Hatteras-BRS-kahuna-CEE --lines=2
 Ok, at this point we have a file structure, and raw data - nothing else. But let's keep going with a simple R script to read in the data. Make a script in the ```src``` folder and call it something clever like ```readData.R``` Try this first on the command line.
 
 ```{r makeData, engine='bash', eval=FALSE}
-touch readData.R
+touch src/readData.R
 ```
 
 While we're at it, let's make three more empty files:
 
 ```{r makeEmptyScripts, engine='bash', eval=FALSE}
-touch wrangleData.R
-touch plotData.R
-touch runRegression.R
+touch src/wrangleData.R
+touch src/plotData.R
+touch src/runRegression.R
 ```
 
 And then we'll make a controller script, since that will be useful.
 
 ```{r ctrl, engine='bash', eval=FALSE}
-touch runAll.R
+touch src/runAll.R
 ```
 
 
