Clear Up the Writing

--- a/lesson2b.Rmd
+++ b/lesson2b.Rmd
@@ -54,9 +54,9 @@ git status
 ![](images/gitRm2.png)
 
 
-What to do now? Well we have options. One thing we could do is to add the deleted file. 
+What to do now? Well we have options. One thing we could do is to add the deleted file with ```git add```, which is kind of confusing. 
 
-Or we could back out the change. We do that with the git checkout command. (**n.b.** again - look at the help from git status - it tells you a lot.)
+Or we could back out the change, and do the deletions using ```git```. We do that with the git checkout command. (**n.b.** again - look at the help from git status - it tells you a lot.)
 
 ```{r git checkout, engine='bash', eval = FALSE}
 git checkout -- src/prediction.R
@@ -66,20 +66,20 @@ git status
 
 Now we're back to a clean working directory. 
 
-Instead of removing the file with ```rm```, let's use ```git``` to do this. Not that when you use ```git``` to do this, you'll see the status it looks very different. - the first one makes a change (the deletion) that hasn't been staged, where as the second (```git rm```) makes a change that has been committed and is ready to stage:
+Instead of removing the file with ```rm```, let's use ```git``` to do this. Note that when you use ```git``` to do this, you'll see the status looks very different. Using ```rm``` makes a change (the deletion) that hasn't been staged, where as the second (```git rm```) makes a change that is staged and ready to be committed:
 
 ![](images/gitrm.png)
 
 Basically to get a clean working directory if you go the ```rm``` route, you have to **add** the file to the staging area, only to then commit it. ```git rm``` just does that for you in one step. 
 
-Now is a good time to commit the deletion.
+Now that that is clear, it is a good time to commit the deletion.
 
 ```{r engine='bash', eval=FALSE}
 git commit -m "Delete prediction.R File"
 ```
 
 
-Now that file is gone and the repo is clean, let's rename the other file - this time using git. As above, if you use git's utilities for this, you don't have to add the changes
+With that file gone and the repo in a clean state, let's rename the other file - this time using ```git```. As above, if you use git's utilities for this, you don't have to add the changes. So instead of ```mv``` we'll use ```git mv```:
 
 ```{r engine='bash', eval=FALSE}
 git mv src/simData.R src/simXYData.R
